--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -1,19 +1,33 @@
-<form>
-<label for="login___title">
-  Username:
-</label>
-{{input value=username}}
-<br>
-<div>
-<label for="post___body">
-  Password:
-</label>
-{{textarea value=password}}
-</div>
-</form>
-<button {{action "login" bubbles=false}}>
-  Login
-</button>
+<form class="form-horizontal">
+  {{#if loginFailed}}
+    <div class="alert">Invalid username or password.</div>
+  {{/if}}
 
+  <!-- {{#if isSlowConnection}}
+    <div class="alert alert-info">The request seems to be taking more time than usual, please wait.</div>
+  {{/if}} -->
+
+  <div class="control-group">
+    <div class="control-label">
+      <label>Username</label>
+    </div>
+
+    <div class="controls">
+      {{input value=username type="text"}}
+    </div>
+  </div>
+
+  <div class="control-group">
+    <div class="control-label">
+      <label>Password</label>
+    </div>
+
+    <div class="controls">
+      {{input value=password type="password"}}
+    </div>
+  </div>
+
+  <button {{bindAttr disabled="isProcessing"}} {{action "login" bubbles=false}} class="btn">Log in!</button>
+</form>
 
 {{outlet}}
