--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -1,33 +1,37 @@
-<form class="form-horizontal">
-  {{#if loginFailed}}
-    <div class="alert">Invalid username or password.</div>
-  {{/if}}
+<div class="container-fluid col-md-4 col-md-offset-4  col-sm-6 col-sm-offset-3">
 
-  <!-- {{#if isSlowConnection}}
-    <div class="alert alert-info">The request seems to be taking more time than usual, please wait.</div>
-  {{/if}} -->
 
-  <div class="control-group">
-    <div class="control-label">
-      <label>Username</label>
+  <form class="form-horizontal">
+    {{#if loginFailed}}
+    <div class="has-error">
+      <label class="control-label" >Invalid username or password.</label>
     </div>
+    {{/if}}
 
-    <div class="controls">
-      {{input value=username type="text"}}
+    {{#if isSlowConnection}}
+      <div class="alert alert-info">The request seems to be taking more time than usual, please wait.</div>
+    {{/if}}
+    <h2>Login</h2>
+    <div class="control-group">
+      <label class="control-label" for="inputEmail"></label>
+      <div class="controls">
+        {{input value=username type="text" id="inputUsername" class="form-control" placeholder="username"}}
+      </div>
     </div>
-  </div>
-
-  <div class="control-group">
-    <div class="control-label">
-      <label>Password</label>
+    <div class="control-group">
+      <label class="control-label" for="inputEmail"></label>
+      <div class="controls">
+        {{input value=password type="password" id="inputPassword" class="form-control" placeholder="password"}}
+      </div>
     </div>
-
-    <div class="controls">
-      {{input value=password type="password"}}
+    <br>
+    <div class="control-group">
+      <div class="controls">
+        <button {{bindAttr disabled="isProcessing"}} {{action "login" bubbles=false}} class="btn btn-primary col-md-4">Submit</button>
+      </div>
     </div>
-  </div>
+  </form>
 
-  <button {{bindAttr disabled="isProcessing"}} {{action "login" bubbles=false}} class="btn">Log in!</button>
-</form>
+</div>
 
 {{outlet}}
