--- a/app/templates/gridster.hbs
+++ b/app/templates/gridster.hbs
@@ -1,2 +1,10 @@
+
 {{outlet}}
-{{x-gridster}}
+{{x-gridster collection=model value=externalValue}}
+
+<p>
+{{onlyOneValue}}
+</p>
+<p>
+  {{input value=onlyOneValue}}
+</p>
