--- a/app/templates/components/x-gridster.hbs
+++ b/app/templates/components/x-gridster.hbs
@@ -1,20 +1,7 @@
 <div class='gridster'>
   <ul>
-        <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">1</li>
-        <li data-row="2" data-col="1" data-sizex="1" data-sizey="1">2</li>
-        <li data-row="3" data-col="1" data-sizex="1" data-sizey="1">3</li>
-
-        <li data-row="1" data-col="2" data-sizex="2" data-sizey="1">4</li>
-        <li data-row="2" data-col="2" data-sizex="2" data-sizey="2">5</li>
-
-        <li data-row="1" data-col="4" data-sizex="1" data-sizey="1">6</li>
-        <li data-row="2" data-col="4" data-sizex="2" data-sizey="1">7</li>
-        <li data-row="3" data-col="4" data-sizex="1" data-sizey="1">8</li>
-
-        <li data-row="1" data-col="5" data-sizex="1" data-sizey="1">9</li>
-        <li data-row="3" data-col="5" data-sizex="1" data-sizey="1">10</li>
-
-        <li data-row="1" data-col="6" data-sizex="1" data-sizey="1">11</li>
-        <li data-row="2" data-col="6" data-sizex="1" data-sizey="2">12</li>
+    {{#each collection as |value|}}
+        <li data-sizex="1" data-sizey="2">{{value.value}}</li>
+    {{/each}}
       </ul>
 </div>
