--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -1,37 +1,35 @@
-<div class="container-fluid col-md-4 col-md-offset-4  col-sm-6 col-sm-offset-3">
-
-
+<div class="container col-md-4 col-md-offset-4  col-sm-6 col-sm-offset-3" >
+<div class="login-div">
   <form class="form-horizontal">
     {{#if loginFailed}}
     <div class="has-error">
       <label class="control-label" >Invalid username or password.</label>
     </div>
     {{/if}}
-
     {{#if isSlowConnection}}
       <div class="alert alert-info">The request seems to be taking more time than usual, please wait.</div>
     {{/if}}
-    <h2>Login</h2>
+    <h3>Login</h3>
     <div class="control-group">
-      <label class="control-label" for="inputEmail"></label>
+
       <div class="controls">
         {{input value=username type="text" id="inputUsername" class="form-control" placeholder="username"}}
       </div>
     </div>
     <div class="control-group">
-      <label class="control-label" for="inputEmail"></label>
+
       <div class="controls">
         {{input value=password type="password" id="inputPassword" class="form-control" placeholder="password"}}
       </div>
     </div>
-    <br>
+
     <div class="control-group">
       <div class="controls">
-        <button {{bindAttr disabled="isProcessing"}} {{action "login" bubbles=false}} class="btn btn-primary col-md-4">Submit</button>
+        <button {{bindAttr disabled="isProcessing"}} {{action "login" bubbles=false}} class="btn btn-primary col-md-4">Iniciar sesión</button>
+
       </div>
     </div>
   </form>
-
 </div>
-
+</div>
 {{outlet}}
